improve code structure and remove some deprecated code